k8s/clusters/nookium/media/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-namespace
  namespace: media
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S
    - ipBlock:
        cidr: 10.50.0.0/16
    - ipBlock:
        cidr: 172.20.0.0/16
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: 10.50.0.0/16
    - ipBlock:
        cidr: 172.20.0.0/16
  policyTypes:
    - Ingress
    - Egress
